src/test/ui/parser/pat-lt-bracket-1.rs
fn main() {
  match 42 {
    x < 7 => (),
   //~^ ERROR expected one of
    _ => ()
  }
}
